# SimpleGLEngine

./: .gitignore  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Input.cpp  Input.h  Makefile  Quad.cpp  Quad.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  glad.c  glad.h  main.cpp
Shaders/: Distort.frag  Main.frag  Main.vert
